@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.167.2.8 2008/06/22 23:08:49 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.167.2.9 2008/12/25 05:50:59 sfeam Exp $"); }
 #endif
 
 #define X11_POLYLINE 1
@@ -447,7 +447,7 @@ static void pr_color __PROTO((cmap_t *));
 static void pr_dashes __PROTO((void));
 static void pr_encoding __PROTO((void));
 static void pr_font __PROTO((char *));
-static void pr_geometry __PROTO((void));
+static void pr_geometry __PROTO((char *));
 static void pr_pointsize __PROTO((void));
 static void pr_width __PROTO((void));
 static void pr_window __PROTO((plot_struct *));
@@ -1555,6 +1555,14 @@ record()
 		    dashedlines = tmp_dashed;
 		if (UNSET != tmp_ctrlq)
 		    ctrlq = tmp_ctrlq;
+	    }
+	    return 1;
+
+        case 's': /* set window geometry */
+	    {
+		char strtmp[256];
+		sscanf(&buf[2], "%s", strtmp);
+		pr_geometry(strtmp);
 	    }
 	    return 1;
 
@@ -5003,7 +5011,7 @@ gnuplot: X11 aborted.\n", ldisplay);
 	}
     }
 
-    pr_geometry();
+    pr_geometry(NULL);
     pr_encoding();		/* check for global default encoding */
     pr_font(NULL);		/* set current font to default font */
     pr_color(&default_cmap);	/* set colors for default colormap */
@@ -5653,9 +5661,9 @@ char *fontname;
  *---------------------------------------------------------------------------*/
 
 static void
-pr_geometry()
+pr_geometry(char *instr)
 {
-    char *geometry = pr_GetR(db, ".geometry");
+    char *geometry = (instr != NULL)? instr : pr_GetR(db, ".geometry");
     int x, y, flags;
     unsigned int w, h;
 
